# cmake-utils

./: .gitignore  README.md
chp01/: CMakeLists.txt
chp02/: CMakeLists.txt  COPYRIGHT  README
chp02/doc/: hello.md
chp02/src/: CMakeLists.txt  main.c
chp03/lib/: CMakeLists.txt  hello.h
chp04/: CMakeLists.txt
chp04/doc/: readme.md
chp04/src/: CMakeLists.txt
chp05/: CMakeLists.txt
chp05/doc/: readme.md
chp05/initializer/: CMakeLists.txt  main.cpp
chp05/libconsensus/: CMakeLists.txt  consensus.cpp  consensus.h
chp05/libencryption/: CMakeLists.txt  cryption.cpp  cryption.h
chp05/libnetwork/: CMakeLists.txt  network.cpp  network.h
t3/: CMakeLists.txt
t3/lib/: CMakeLists.txt
