SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -DSTATICLIB")
FILE(GLOB SRC_LIST "*.cpp")
FILE(GLOB HEADERS "*.h")
ADD_LIBRARY(consensus ${SRC_LIST} ${HEADERS})

# SET_TARGET_PROPERTIES(consensus PROPERTIES VERSION 1.0 SOVERSION 1)
# INSTALL(TARGETS consensus
#    LIBRARY DESTINATION lib
#    ARCHIVE DESTINATION lib)
# INSTALL(FILES consensus.h DESTINATION include/jtcoin/consensus)